v1 전체 소스코드 수정 완료